--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.12"
 better-bencode = "^0.2.1"
 gunicorn = "^20.0.4"
 fastapi = "^0.52.0"
 uvicorn = "^0.11.7"
-jinja2 = "^2.11.1"
+jinja2 = "3.0.3"
 aiofiles = "^0.4.0"
 peewee = "^3.13.1"
 peewee-async = "^0.7.0"
@@ -19,6 +19,87 @@ aiopg = "^1.0.0"
 psycopg2-binary = "^2.8.4"
 Faker = "^4.0.2"
 ipython = "^7.20.0"
+absl-py = "2.0.0"
+astunparse = "1.6.3"
+cachetools = "5.3.1"
+certifi = "2023.7.22"
+charset-normalizer = "3.2.0"
+cmake = "3.27.5"
+fasttext-wheel = "0.9.2"
+filelock = "3.12.4"
+flatbuffers = "23.5.26"
+fsspec = "2023.9.2"
+gast = "0.4.0"
+google-auth = "2.23.0"
+google-auth-oauthlib = "1.0.0"
+google-pasta = "0.2.0"
+grpcio = "1.58.0"
+h5py = "3.9.0"
+hanlp = "2.1.0b50"
+hanlp-common = "0.0.19"
+hanlp-downloader = "0.0.25"
+hanlp-trie = "0.0.5"
+huggingface-hub = "0.17.2"
+idna = "3.4"
+importlib-metadata = "6.8.0"
+keras = "2.13.1"
+libclang = "16.0.6"
+lit = "16.0.6"
+markdown = "3.4.4"
+markupsafe = "2.1.3"
+mpmath = "1.3.0"
+networkx = "3.1"
+numpy = "1.24.3"
+nvidia-cublas-cu11 = "11.10.3.66"
+nvidia-cuda-cupti-cu11 = "11.7.101"
+nvidia-cuda-nvrtc-cu11 = "11.7.99"
+nvidia-cuda-runtime-cu11 = "11.7.99"
+nvidia-cudnn-cu11 = "8.5.0.96"
+nvidia-cufft-cu11 = "10.9.0.58"
+nvidia-curand-cu11 = "10.2.10.91"
+nvidia-cusolver-cu11 = "11.4.0.1"
+nvidia-cusparse-cu11 = "11.7.4.91"
+nvidia-nccl-cu11 = "2.14.3"
+nvidia-nvtx-cu11 = "11.7.91"
+oauthlib = "3.2.2"
+opencc = "1.1.6"
+opt-einsum = "3.3.0"
+packaging = "23.1"
+penman = "1.2.1"
+perin-parser = "0.0.12"
+phrasetree = "0.0.8"
+protobuf = "4.24.3"
+pyasn1 = "0.5.0"
+pyasn1-modules = "0.3.0"
+pybind11 = "2.11.1"
+pynvml = "11.5.0"
+pyyaml = "6.0.1"
+regex = "2023.8.8"
+requests = "2.31.0"
+requests-oauthlib = "1.3.1"
+rsa = "4.9"
+safetensors = "0.3.3"
+scipy = "1.10.1"
+sentencepiece = "0.1.99"
+six = "1.16.0"
+sympy = "1.12"
+tensorboard = "2.13.0"
+tensorboard-data-server = "0.7.1"
+tensorflow = "2.13.0"
+tensorflow-estimator = "2.13.0"
+tensorflow-io-gcs-filesystem = "0.34.0"
+termcolor = "2.3.0"
+tokenizers = "0.11.6"
+toposort = "1.5"
+torch = "2.0.1"
+tqdm = "4.66.1"
+transformers = "4.33.2"
+triton = "2.0.0"
+typing-extensions = "4.5.0"
+urllib3 = "1.26.16"
+werkzeug = "2.3.7"
+wrapt = "1.15.0"
+zipp = "3.17.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
