--- a/docker/persistence/Dockerfile
+++ b/docker/persistence/Dockerfile
@@ -1,6 +1,8 @@
-FROM postgres:13.1
+FROM groonga/mroonga:mysql-8.0-latest
 
-COPY ./docker/persistence/maintenance /usr/local/bin/maintenance
-RUN chmod +x /usr/local/bin/maintenance/*
-RUN mv /usr/local/bin/maintenance/* /usr/local/bin \
-    && rmdir /usr/local/bin/maintenance
+# COPY docker/persistence/my.cnf /etc/mysql/conf.d/
+
+# COPY ./docker/persistence/maintenance /usr/local/bin/maintenance
+# RUN chmod +x /usr/local/bin/maintenance/*
+# RUN mv /usr/local/bin/maintenance/* /usr/local/bin \
+#     && rmdir /usr/local/bin/maintenance
